@@ -1,4 +1,4 @@
-## Copyright (C) 2008, 2009, 2010, 2011, 2012 Moreno Marzolla
+## Copyright (C) 2012 Moreno Marzolla
 ##
 ## This file is part of the queueing toolbox.
 ##
@@ -23,74 +23,27 @@
 ## @cindex bounds, balanced system
 ## @cindex closed network
 ##
-## Compute Balanced System Bounds for single-class, closed Queueing Networks
-## with @math{K} service centers.
+## This function computes Balanced System Bounds for throughput and response
+## time of closed, single class queueing networks. Multiclass networks
+## might be supported in the future.
 ##
-## @strong{INPUTS}
+## This function dispatches the computation to @code{qnclosedsinglebsb}.
 ##
-## @table @var
-##
-## @item N
-## number of requests in the system (scalar).
-##
-## @item D
-## @code{@var{D}(k)} is the service demand at center @math{k};
-## @code{@var{K}(k) @geq{} 0}.
-##
-## @item Z
-## external delay (think time, scalar, @code{@var{Z} @geq{} 0}). If
-## omitted, it is assumed to be zero.
-##
-## @end table
-##
-## @strong{OUTPUTS}
-##
-## @table @var
-##
-## @item Xl
-## @itemx Xu
-## Lower and upper bound on the system throughput.
-##
-## @item Rl
-## @itemx Ru
-## Lower and upper bound on the system response time.
-##
-## @end table
-##
-## @seealso{qnclosedab, qnclosedgb, qnclosedpb}
+## @seealso{qnclosedsinglebsb}
 ##
 ## @end deftypefn
 
 ## Author: Moreno Marzolla <marzolla(at)cs.unibo.it>
 ## Web: http://www.moreno.marzolla.name/
 
-function [Xl Xu Rl Ru] = qnclosedbsb( N, D, Z )
-  if ( nargin < 2 || nargin > 3 )
+function [Xl Xu Rl Ru] = qnclosedbsb( N, varargin )
+  if ( nargin < 2 || nargin > 5 )
     print_usage();
   endif
-  ( isscalar(N) && N>0 ) || \
-      error( "N must be a positive scalar" );
-  ( isvector(D) && length(D)>0 && all(D>=0) ) || \
-      error( "D must be a vector of nonnegative floats" );
-  if ( nargin < 3 )
-    Z = 0;
+
+  if (isscalar(N))
+    [Xl Xu Rl Ru] = qnclosedsinglebsb(N, varargin{:});
   else
-    ( isscalar(Z) && Z>=0 ) || \
-        error( "Z must be a nonnegative scalar" );
+    [Xl Xu Rl Ru] = qnclosedmultibsb(N, varargin{:});
   endif
-
-  D_max = max(D);
-  D_tot = sum(D);
-  D_ave = mean(D);
-  Xl = N/(D_tot+Z+( (N-1)*D_max )/( 1+Z/(N*D_tot) ) );
-  Xu = min( 1/D_max, N/( D_tot+Z+( (N-1)*D_ave )/(1+Z/D_tot) ) );
-  Rl = max( N*D_max-Z, D_tot+( (N-1)*D_ave )/( 1+Z/D_tot) );
-  Ru = D_tot + ( (N-1)*D_max )/( 1+Z/(N*D_tot) );
 endfunction
-
-%!test
-%! fail("qnclosedbsb(1)");
-%! fail("qnclosedbsb(1, [])", "vector");
-%! fail("qnclosedbsb(-1,[1 1 1], [1 1 1])", "positive scalar");
-%! fail("qnclosedbsb(1,[-1 0 0], [1 1 1])", "nonnegative");
-%! fail("qnclosedbsb(1,[0 0 0],-1)", "nonnegative scalar");
