@@ -1,4 +1,4 @@
-## Copyright (C) 2012 Moreno Marzolla
+## Copyright (C) 2008, 2009, 2010, 2011, 2012 Moreno Marzolla
 ##
 ## This file is part of the queueing toolbox.
 ##
@@ -17,24 +17,23 @@
 
 ## -*- texinfo -*-
 ##
-## @deftypefn {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedsingleab (@var{N}, @var{S})
-## @deftypefnx {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedsingleab (@var{N}, @var{S}, @var{V})
-## @deftypefnx {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedsingleab (@var{N}, @var{S}, @var{V}, @var{m})
-## @deftypefnx {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedsingleab (@var{N}, @var{S}, @var{V}, @var{m}, @var{Z})
+## @deftypefn {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedsinglebsb (@var{N}, @var{S})
+## @deftypefnx {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedsinglebsb (@var{N}, @var{S}, @var{V})
+## @deftypefnx {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedsinglebsb (@var{N}, @var{S}, @var{V}, @var{m})
+## @deftypefnx {Function File} {[@var{Xl}, @var{Xu}, @var{Rl}, @var{Ru}] =} qnclosedsinglebsb (@var{N}, @var{S}, @var{V}, @var{m}, @var{Z})
 ##
-## @cindex bounds, asymptotic
+## @cindex bounds, balanced system
 ## @cindex closed network
 ##
-## Compute Asymptotic Bounds for single closed networks. Single-server
-## and infinite-server nodes are supported. Multiple-server nodes and
-## general load-dependent servers are not supported.
+## Compute Balanced System Bounds for single-class, closed Queueing Networks
+## with @math{K} service centers.
 ##
 ## @strong{INPUTS}
 ##
 ## @table @var
 ##
 ## @item N
-## number of requests in the system (scalar, @code{@var{N}>0}).
+## number of requests in the system (scalar).
 ##
 ## @item S
 ## @code{@var{S}(k)} is the mean service time at center @math{k}
@@ -45,12 +44,9 @@
 ## @math{k} (@code{@var{V}(k) @geq{} 0}). Default is 1.
 ##
 ## @item m
-## @code{@var{m}(k)} is the number of servers at center @math{k}
-## (if @var{m} is a scalar, all centers have that number of servers). If
-## @code{@var{m}(k) < 1}, center @math{k} is a delay center (IS);
-## if @code{@var{m}(k) = 1}, center @math{k} is a M/M/1-FCFS server.
-## This function does not support multiple-server nodes. Default
-## is 1.
+## @code{@var{m}(k)} is the number of servers at center @math{k}.
+## Currently this function supports @code{@var{m}(k) = 1} only
+## (sing-eserver FCFS nodes). Default is 1.
 ##
 ## @item Z
 ## External delay (@code{@var{Z} @geq{} 0}). Default is 0.
@@ -63,23 +59,23 @@
 ##
 ## @item Xl
 ## @itemx Xu
-## Lower and upper system throughput bounds.
+## Lower and upper bound on the system throughput.
 ##
 ## @item Rl
 ## @itemx Ru
-## Lower and upper response time bounds.
+## Lower and upper bound on the system response time.
 ##
 ## @end table
 ##
-## @seealso{qnclosedmultiab}
+## @seealso{qnclosedab, qnclosedgb, qnclosedpb}
 ##
 ## @end deftypefn
 
 ## Author: Moreno Marzolla <marzolla(at)cs.unibo.it>
 ## Web: http://www.moreno.marzolla.name/
 
-function [Xl Xu Rl Ru] = qnclosedsingleab( N, S, V, m, Z )
-  
+function [Xl Xu Rl Ru] = qnclosedsinglebsb( N, S, V, m, Z )
+
   if (nargin<2 || nargin>5)
     print_usage();
   endif
@@ -108,8 +104,8 @@ function [Xl Xu Rl Ru] = qnclosedsingleab( N, S, V, m, Z )
   [err S V m] = common_size(S, V, m);
   (err == 0) || \
       error( "S, V and m are of incompatible size" );
-  all(m<=1) || \
-      error( "multiple server nodes are not supported" );
+  all(m==1) || \
+      error( "only single-server nodes are supported" );
   all(S>=0) || \
       error( "S must be >= 0 ");
   all(V>=0) || \
@@ -124,13 +120,18 @@ function [Xl Xu Rl Ru] = qnclosedsingleab( N, S, V, m, Z )
 
   D = S.*V;
 
-  Dtot_single = sum(D(m==1)); # total demand at single-server nodes
-  Dtot_delay = sum(D(m<1)); # total demand at IS nodes
-  Dtot = sum(D); # total demand
-  Dmax = max(D); # max demand
-
-  Xl = N/(N*Dtot_single + Dtot_delay + Z);
-  Xu = min( N/(Dtot+Z), 1/Dmax );
-  Rl = max( Dtot, N*Dmax - Z );
-  Ru = N*Dtot_single + Dtot_delay;
+  D_max = max(D);
+  D_tot = sum(D);
+  D_ave = mean(D);
+  Xl = N/(D_tot+Z+( (N-1)*D_max )/( 1+Z/(N*D_tot) ) );
+  Xu = min( 1/D_max, N/( D_tot+Z+( (N-1)*D_ave )/(1+Z/D_tot) ) );
+  Rl = max( N*D_max-Z, D_tot+( (N-1)*D_ave )/( 1+Z/D_tot) );
+  Ru = D_tot + ( (N-1)*D_max )/( 1+Z/(N*D_tot) );
 endfunction
+
+%!test
+%! fail("qnclosedsinglebsb(1)");
+%! fail("qnclosedsinglebsb(1, [])", "vector");
+%! fail("qnclosedsinglebsb(-1,[1 1 1], [1 1 1])", "positive integer");
+%! fail("qnclosedsinglebsb(1,[-1 0 0], [1 1 1])", ">= 0");
+%! fail("qnclosedsinglebsb(1,[0 0 0],-1)", ">= 0");
